--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.squareup.okhttp3:okhttp:3.14.7'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
+
+//    Fresco
+    implementation 'com.facebook.fresco:fresco:2.5.0'
 }
