--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,4 +102,11 @@ dependencies {
 
 //    Paging
     implementation 'androidx.paging:paging-runtime:2.1.2'
+
+//    Dagger
+    def dagger_version = "2.28.3"
+    implementation "com.google.dagger:dagger:${dagger_version}"
+    implementation "com.google.dagger:dagger-android-support:${dagger_version}"
+    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
+    annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
 }
