initialize movie view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    buildFeatures {
+        viewBinding true
+    }
+
     defaultConfig {
         applicationId "com.chiragjn.movieman"
         minSdkVersion 23
