--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieMan">
+        <activity android:name=".activity.MovieActivity"></activity>
         <activity android:name=".activity.HomeActivity" />
         <activity
             android:name=".activity.SplashActivity"
