--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieMan">
-        <activity android:name=".activity.MovieActivity"
+        <activity android:name=".activity.MovieCollectionActivity"></activity>
+        <activity
+            android:name=".activity.MovieActivity"
             android:exported="true">
             <intent-filter
-                android:label="@string/movie_view_ref_code" android:autoVerify="true">
+                android:autoVerify="true"
+                android:label="@string/movie_view_ref_code">
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data
                     android:host="movieman.com"
                     android:pathPrefix="/movie"
