--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MovieMan">
-        <activity android:name=".activity.MovieCollectionActivity"></activity>
+        <activity android:name=".activity.MovieCollectionActivity" />
         <activity
             android:name=".activity.MovieActivity"
             android:exported="true">
